<resources>

    <string name="app_name">Carro Vendor</string>

    <string name="razor_pay_key" translatable="false">rzp_test_DzhOHKz9K9wtLY</string>
    <string name="razor_pay_secret" translatable="false">NBgkML3TNHS6kfGZi3HUjZqg</string>

    <string name="get_started">Get Started</string>
    <string name="sign_in">Sign In</string>
    <string name="didn_t_get_it_on_the_first_time">Didn’t Get it on the first time?</string>
    <string name="resend_in_00_29">Resend in 00:29</string>
    <string name="your_ride_just_a_tap_away">Your ride, just a tap away.</string>
    <string name="get_started_by_verifying_your_phone_number">Get started by verifying your phone number.</string>
    <string name="enter_your_mobile_number">Enter your mobile number</string>
    <string name="edit_phone_number">Edit Phone number</string>
    <string name="send_otp">Send OTP</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="we_ve_sent_a_one_time_password_otp_to_your_mobile_number">We\'ve sent a One-Time Password (OTP) to your mobile number.</string>
    <string name="resend_otp_in_10s">Resend OTP in 10s</string>
    <string name="complete_your_profile">Complete Your Profile</string>
    <string name="don_t_worry_only_you_can_see_your_personal_data_no_other_else_will_able_to_see_it">Don’t worry, only you can see your personal data. No other else will able to see it.</string>
    <string name="name">Name</string>
    <string name="enter_your_name">Enter Your Name</string>
    <string name="gender">Gender</string>
    <string name="register">Register</string>
    <string name="skip_for_now">Skip For Now</string>
    <string name="enable_location_access">Enable Location Access</string>
    <string name="to_ensure_a_shameless_and_efficient_experience_allow_us_access_to_your_location">To ensure a shameless and efficient experience, allow us access to your location.</string>
    <string name="allow_location_access">Allow Location Access</string>
    <string name="maybe_later">Maybe Later</string>
    <string name="submit">Submit</string>
    <string name="aadhar_number">Aadhar number</string>
    <string name="aadhaar_number_uid">Aadhaar Number (UID)</string>
    <string name="upload_aadhaar_card_front">Upload Aadhaar Card Front</string>
    <string name="upload_aadhaar_card_back">Upload Aadhaar Card Back</string>
    <string name="choose_file">Choose File</string>
    <string name="license_number">License Number</string>
    <string name="upload_driving_license">Upload Driving License</string>
    <string name="driving_license_number">Driving License Number</string>
    <string name="vehicle_type">Vehicle Type</string>
    <string name="vehicle_registration_number">Vehicle Registration Number</string>
    <string name="my_profile">My Profile</string>
    <string name="basic_details">Basic Details</string>
    <string name="email">Email</string>
    <string name="phone_number">Phone number</string>
    <string name="driver_and_vehicle_verification">Driver and Vehicle Verification</string>
    <string name="pan_number">PAN Number</string>
    <string name="bank_details">Bank Details</string>
    <string name="account_number">Account number</string>
    <string name="ifsc_code">IFSC Code</string>
    <string name="bank_name">Bank Name</string>
    <string name="account_holder_name">Account Holder Name</string>
    <string name="my_wallet">My Wallet</string>
    <string name="balance">Balance</string>
    <string name="add_money">Add Money</string>
    <string name="lastest_transaction">Lastest Transaction</string>
    <string name="topup_amount">Topup Amount</string>
    <string name="enter_amount">Enter Amount</string>
    <string name="recommended">Recommended</string>
    <string name="notes">Notes</string>
    <string name="optional">(Optional)</string>
    <string name="write_your_notes_here">Write your notes here</string>
    <string name="toll_state_tax_extra_nparking_extra_if_applicable"><![CDATA[Toll & State tax extra\nParking extra, if Applicable]]></string>
    <string name="verified">Verified</string>
    <string name="driving_licence">Driving Licence</string>
    <string name="police_verification">Police Verification</string>
    <string name="not_submitted">Not Submitted</string>
    <string name="pending">Pending</string>
    <string name="desire">Desire</string>
    <string name="cg07_12566">CG07 12566</string>
    <string name="regis_certificate">Regis Certificate</string>
    <string name="insurance">Insurance</string>
    <string name="permit">Permit</string>
    <string name="car_photo_with_owner">Car photo with owner</string>
    <string name="upload_car_photo_with_owner">Choose Car photo with owner</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="wallet">Wallet</string>
    <string name="welcome">WELCOME </string>
    <string name="user">User</string>
    <string name="enter_your_email">Enter Your Email</string>
    <string name="edit_details">Edit Details</string>
    <string name="update">Update</string>
    <string name="vehicle">Vehicle</string>
    <string name="add_new_car">Add new Car</string>
    <string name="select_car">Select Car</string>
    <string name="car_brand">Car Brand</string>
    <string name="car_name">Car Name</string>
    <string name="car_number">Car Number</string>
    <string name="fuel_type">Fuel Type</string>
    <string name="no_of_seats">No. of Seats</string>
    <string name="ac_type">Ac Type</string>
    <string name="no_of_bags">No. of Bags</string>
    <string name="add_car">Add Car</string>
    <string name="upload_your_driving_licence">Upload Your Driving Licence</string>
    <string name="expiration_date">Expiration Date</string>
    <string name="upload">Upload</string>
    <string name="select_driver">Select Driver</string>
    <string name="otp_verified">OTP Verified!</string>
    <string name="your_mobile_number_has_been_successfully_verified">Your mobile number has been successfully verified.</string>
    <string name="upload_documents">Upload Documents</string>
    <string name="booking_confirmed">Booking confirmed!</string>
    <string name="get_ready_to_serve_your_customer">Get ready to serve your customer.</string>
    <string name="go_to_home">Go to Home</string>
    <string name="logout">Logout</string>
    <string name="are_you_sure_you_want_to_exit">Are you sure you want to exit ?</string>
    <string name="you_will_be_redirected_to_login_screen">You will be redirected to Login screen.</string>
    <string name="yes_exit">Yes Exit</string>
    <string name="your_license_and_other_details_have_been_successfully_uploaded">Your license and other details have been successfully uploaded</string>
    <string name="our_team_will_review_them_shortly_for_approval_you_can_continue_using_the_app_while_we_verify_your_documents">Our team will review them shortly for approval. You can continue using the app while we verify your documents.</string>
    <string name="cancel">Cancel</string>
    <string name="notifications">Notifications</string>
    <string name="no_notifications">No Notifications</string>
    <string name="we_ll_let_you_know_when_there_will_be_something_to_update_you">We’ll let you know when there will be something to update you.</string>
    <string name="upload_car_image">Upload Car Image</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="otp_verification">OTP Verification</string>
    <string name="upload_registration_certificate">Choose Registration Certificate</string>
    <string name="upload_permit">Choose Permit</string>
    <string name="done">Done</string>
    <string name="choose_insurance">Choose Insurance</string>
    <string name="no_transactions">No Transactions</string>
    <string name="no_new_booking">No New Booking</string>
    <string name="no_driver_found">No Driver Found</string>
    <string name="no_car_detail_found">No Car Detail Found</string>
    <string name="accept">Accept</string>
    <string name="address">Address</string>
    <string name="enter_your_address">Enter Your Address</string>
    <string name="car_model">Car Model</string>
    <string name="car_type">Car Type</string>
    <string name="confirm">Confirm</string>
    <string name="complete">Complete</string>
    <string name="accept_terms_and_condition_to_continue">Accept Terms And Condition To Continue</string>
    <string name="alternate_mobile_number">Alternate Mobile Number</string>

    <string name="mobile_number">Mobile Number</string>

    <string name="branch">Branch</string>
    <string name="state">State</string>
    <string name="city">City</string>
    <string name="pin_code">Pin code</string>
    <string name="upload_pan_card">Upload Pan Card</string>
    <string name="service_type">Service Type</string>

    <string name="driver_type">Driver Type</string>

    <string name="price">Price</string>
    <string name="terms_condition"><![CDATA[Terms & Condition]]></string>
    <string name="inclusion">Inclusion</string>
    <string name="exclusion">Exclusion</string>
    <string name="select_car_image">Select car image</string>
    <string name="upload_licence_image">Upload Licence Image</string>
    <string name="licence_expiry_date">Licence Expiry Date</string>
    <string name="enter_licence_expiry_date">Enter Licence Expiry Date</string>
    <string name="document_details">Document Details</string>

    <string name="driving_license_details">Driving License Details</string>

    <string name="adhar_front_image">Adhar Front Image</string>
    <string name="adhar_back_image">Adhar Back Image</string>
    <string name="pan_image">Pan Image</string>
    <string name="bank_upi">Bank Upi</string>
    <string name="phone_pay">Phone Pay</string>
    <string name="google_pay">Google Pay</string>
    <string name="business_details">Business Details</string>
    <string name="business_name">Business Name</string>
    <string name="business_number">Business Number</string>
    <string name="business_email">Business Email</string>
    <string name="business_licence_no">Business Licence No.</string>
    <string name="business_address">Business Address</string>
    <string name="licence_front_image">Licence Front Image</string>
    <string name="licence_back_image">Licence Back Image</string>
    <string name="fleet">Fleet</string>
    <string name="default_notification_channel_id">notification_channel</string>

    <string name="clear_all">Clear All</string>

    <string name="no_file_chosen">No file chosen</string>
    <string name="driving_license_image">Driving license image</string>
    <string name="drive_type">Driver type</string>
    <string name="add_pan_card">Add Pan Card</string>
    <string name="add">Add</string>
    <string name="add_aadhar_car">Add aadahar card</string>
    <string name="add_aadhar_card">Add Aadhar card</string>
    <string name="add_aadhar">Add Aadhar</string>
    <string name="verify">Verify</string>
    <string name="adhar_number">Aadhar number</string>
    <string name="dl_number">DL Number</string>
    <string name="driving_licence_number">Driving Licence Number</string>
    <string name="date_of_birth">Date of birth</string>
    <string name="online">Online</string>
    <string name="offline">Offline</string>

</resources>