<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/home">
        </item>


        <item
            android:id="@+id/nav_wallet"
            android:icon="@drawable/ic_wallet"
            android:title="@string/wallet">
        </item>
        <item
            android:id="@+id/nav_vehicle"
            android:icon="@drawable/ic_bottom"
            android:title="@string/fleet">
        </item>


        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_profile"
            android:title="Profile">
        </item>


    </group>
</menu>