<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    android:id="@+id/main"

    tools:context=".ui.activity.LoginActivity">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_15sdp"
        android:layout_marginTop="@dimen/_50sdp"
        android:gravity="center"
        android:text="@string/sign_in"
        android:textColor="@color/gray_text"
        android:textSize="@dimen/_20ssp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_15sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:gravity="center"
        android:text="@string/your_ride_just_a_tap_away"
        android:textColor="@color/gray_text"
        android:textSize="@dimen/_10ssp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_15sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:gravity="center"
        android:text="@string/get_started_by_verifying_your_phone_number"
        android:textColor="@color/black"
        android:textSize="@dimen/_11ssp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_15sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:text="@string/enter_your_mobile_number"
        android:textColor="@color/black"
        android:textSize="@dimen/_13ssp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/etMobile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_15sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:background="@drawable/edit_text_shape"
        android:hint="@string/enter_your_mobile_number"
        android:inputType="number"
        android:textSize="@dimen/_12ssp"
        android:maxLength="10"
        android:padding="@dimen/_10sdp" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnSendOtp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_15sdp"
        android:layout_marginTop="@dimen/_40sdp"
        android:paddingVertical="@dimen/_7sdp"
        android:textSize="@dimen/_15ssp"
        android:text="@string/send_otp"
        app:cornerRadius="@dimen/_10sdp" />


</LinearLayout>