<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/main"

    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".ui.activity.OtpActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_15sdp"
        android:layout_marginTop="@dimen/_50sdp"
        android:gravity="center"
        android:text="@string/otp_verification"
        android:textColor="@color/gray_text"
        android:textSize="@dimen/_20ssp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_15sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:gravity="center"
        android:text="@string/your_ride_just_a_tap_away"
        android:textColor="@color/gray_text"
        android:textSize="@dimen/_10ssp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_15sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:gravity="center"
        android:text="@string/enter_otp"
        android:textColor="@color/gray_text"
        android:textSize="@dimen/_10ssp" />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_15sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:gravity="center"
        android:text="@string/we_ve_sent_a_one_time_password_otp_to_your_mobile_number"
        android:textColor="@color/black"
        android:textSize="@dimen/_11ssp" />


    <in.aabhasjindal.otptextview.OtpTextView
        android:id="@+id/otpview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_44sdp"
        android:padding="@dimen/_10sdp"
        android:textColor="@color/primary"
        app:box_margin="@dimen/_3sdp"
        app:height="@dimen/_45sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_otpDesc"
        app:length="6"
        app:otp_box_background_active="@drawable/otp_active_box"
        app:otp_box_background_inactive="@drawable/otp_inactive_box"
        app:otp_text_size="@dimen/_20sdp"
        app:width="@dimen/_41sdp" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/_10sdp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvSendOtp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="end"
            android:text="@string/didn_t_get_it_on_the_first_time"
            android:textColor="@color/gray_light" />

        <TextView
            android:id="@+id/tvSendOtpCount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_2sdp"
            android:layout_weight="1.4"
            android:text="@string/resend_in_00_29"
            android:textColor="@color/red" />

        <TextView
            android:id="@+id/tvResendOTP"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_2sdp"
            android:layout_weight="1.3"
            android:text="@string/resend_otp"
            android:textColor="@color/primary"
            android:textStyle="bold"
            android:visibility="gone" />
    </LinearLayout>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnVerify"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_15sdp"
        android:layout_marginVertical="@dimen/_10sdp"
        android:paddingVertical="@dimen/_7sdp"
        android:text="Verify"
        android:textSize="@dimen/_15ssp"
        app:cornerRadius="@dimen/_10sdp" />


</LinearLayout>